refactor: Improved code quality
Multiple implements for code quality and remvoved unused code.
Removed feature implementation using rustls as I won't be using it.
Added tests for generating the client code. Only positive tests
currently.

Breaking changes: Windows won`t work as only openssl is currently
implemented. This might be changed in the future.

Resolves: None

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -2,30 +2,21 @@
 name = "tauri-app"
 version = "0.0.0"
 description = "A Tauri App"
-authors = ["you"]
-license = ""
+authors = ["Kjetil Fjellheim"]
+license = "LGPL2"
 repository = ""
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
 tauri-build = { version = "1.4", features = [] }
 
 [dependencies]
-tauri = { version = "1.4.1", features = ["shell-open", "devtools"] }
+tauri = { version = "1.4.1", features = ["shell-open", "devtools", "custom-protocol"] }
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.107"
-reqwest = { version = "0.11.20", features = ["blocking"] }
+reqwest = { version = "0.11.20", features = ["blocking", "native-tls"] }
 warp = { version = "0.3.5", features = ["tls"] }
-tracing = "0.1.37"
-tracing-subscriber = "0.3.17"
-
-[features]
-custom-protocol = ["tauri/custom-protocol"]
-default = ["native-tls"]
-rustls-tls = ["reqwest/rustls-tls-manual-roots"]
-native-tls = ["reqwest/native-tls"]
+env_logger = { version = "0.10.0"}
 
 [profile.release]
 incremental = false
